# nova

./: .gitignore  CHANGES.md  Cargo.toml  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  web-deploy.yml  web-sync.yml
config/: default.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  schema.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  cursor.rs  lib.rs  marks.rs  mode.rs  session.rs  undo.rs
crates/git/: Cargo.toml
crates/git/src/: branch.rs  commit.rs  diff.rs  lib.rs  repo.rs  status.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: highlighter.rs  languages.rs  lib.rs  theme.rs
crates/keybinds/: Cargo.toml
crates/keybinds/src/: action.rs  defaults.rs  engine.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  lib.rs  protocol.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  command_palette.rs  editor_pane.rs  file_tree.rs  fuzzy_finder.rs  git_panel.rs  lib.rs  split.rs  status_bar.rs  tab_bar.rs  terminal_pane.rs  theme.rs
scripts/: nova
src/: App.tsx  declarations.d.ts  iconSetup.ts  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: claude.rs  files.rs  fileserver.rs  git.rs  jupyter.rs  lsp_monitor.rs  mod.rs  pty.rs  spotify.rs  updater.rs
src/components/: AILauncherPage.tsx  AIPanel.tsx  AITerminal.tsx  AiLogos.tsx  ClaudeChat.tsx  ClaudeTerminal.tsx  ClaudeUsageTile.tsx  CommandPalette.tsx  Editor.tsx  FileIcon.tsx  FileTree.tsx  FolderIcon.tsx  FuzzyFinder.tsx  GitGraph.tsx  GitPanel.tsx  HelpPanel.tsx  HtmlViewerTab.tsx  LSPDashboardPanel.tsx  MarkdownPreview.tsx  MdPreviewTab.tsx  NotebookViewerTab.tsx  PdfViewerTab.tsx  PinnedTerminal.tsx  Settings.tsx  SpotifyPlayer.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/extensions/: vimLite.ts
src/store/: index.ts
src/theme/: atomDark.ts  ayuDark.ts  catppuccinMocha.ts  crimson.ts  dracula.ts  everforest.ts  githubDark.ts  gruvboxDark.ts  kanagawa.ts  monochrome.ts  monokai.ts  nord.ts  oneDark.ts  palenight.ts  rosePine.ts  themes.ts  tokyoNight.ts
web/: index.html  manual.html
