[workspace]
members = [
    "src-tauri",
    "crates/core",
    "crates/config",
    "crates/keybinds",
    "crates/highlight",
    "crates/git",
    "crates/lsp",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1.0"
thiserror  = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio      = { version = "1.0", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm  = "0.27"
ratatui    = "0.26"
ropey      = "1.6"
toml       = "0.8"
dirs       = "5.0"
