[package]
name    = "nova-highlight"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter           = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust      = "0.21"
tree-sitter-python    = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go        = "0.21"
tree-sitter-json      = "0.21"
tree-sitter-bash      = "0.21"
ratatui               = { workspace = true }
nova-config            = { path = "../config" }
