[package]
name    = "nova-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
crossterm  = { workspace = true }
ratatui    = { workspace = true }
dirs       = { workspace = true }
nova-core      = { path = "../core" }
nova-config    = { path = "../config" }
nova-keybinds  = { path = "../keybinds" }
nova-highlight = { path = "../highlight" }
nova-git       = { path = "../git" }
nova-lsp       = { path = "../lsp" }
portable-pty  = "0.8"
